# CoreFramework

./: .gitmodules  CMakeLists.txt  LICENSE
include/: fileutils.h  indexbuffer.h  input.h  mat4.h  mathutils.h  texture.h  texturearray.h  texturebase.h  uniform.h  uniformbuffer.h  vec4.h  window.h
src/: main.cpp
src/graphics/: shader.cpp  shader.h  texture.cpp  texturearray.cpp  texturebase.cpp  window.cpp
src/graphics/buffers/: indexbuffer.cpp  uniformbuffer.cpp  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
src/input/: input.cpp
src/math/: mat4.cpp  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/utils/: debugutils.cpp  debugutils.h  fileutils.cpp  mathutils.cpp  timer.cpp  timer.h
